debut du formulaire de recherche

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         </nav>
       </header>
       <main>
+        <div class="info-group">
+          <form method="get" action="">
+            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+            <input
+              type="text"
+              name="prenom"
+              id="prenom"
+              placeholder="Marseille, France"
+              size="30"
+              maxlength="20"
+            />
+            <button>Rechercher</button>
+          </form>
+        </div>
         <div class="hebergements-and-populaires">
           <section class="hebergements"></section>
           <section class="populaires">
