Mise en page desktop achevé, validation W3C à faire

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <div class="activites-container">
         <a href="#activites" class="activite-card">
           <img src="./images/activites/reno-laithienne.jpg" alt="Vieux-Port" />
-          <p class="gras16px">Vieux-Port</p>
+          <p class="gras16px act-margin">Vieux-Port</p>
         </a>
 
         <a href="#activites" class="activite-card">
@@ -310,7 +310,7 @@
             src="./images/activites/paul-hermann.jpg"
             alt="Fort de Pomègues"
           />
-          <p class="gras16px">Fort de Pomègues</p>
+          <p class="gras16px act-margin">Fort de Pomègues</p>
         </a>
 
         <a href="#activites" class="activite-card">
@@ -318,7 +318,7 @@
             src="./images/activites/kilyan-sockalingum.jpg"
             alt="Parc national des Calanques"
           />
-          <p class="gras16px">Parc national des Calanques</p>
+          <p class="gras16px act-margin">Parc national des Calanques</p>
         </a>
 
         <a href="#activites" class="activite-card">
@@ -326,7 +326,7 @@
             src="./images/activites/florian-wehde.jpg"
             alt="Notre-Dame-de-la-Garde"
           />
-          <p class="gras16px">Notre-Dame-de-la-Garde</p>
+          <p class="gras16px act-margin">Notre-Dame-de-la-Garde</p>
         </a>
       </div>
     </section>
