Responsive Tablette + début Mobile

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           </div>
 
           <div class="filtres-card">
-            <i class="fa-solid fa-dog"></i>
-            <h3>Animaux autorisés</h3>
+            <i class="fa-solid fa-fire"></i>
+            <h3>Nos pépites</h3>
           </div>
         </div>
       </section>
@@ -110,7 +110,7 @@
       </section>
     </section>
 
-    <main id="Offres" class="main margintop">
+    <main id="hebergement" class="main margintop">
       <section class="offresMain">
         <h4>Hébergements à Marseille</h4>
         <div class="container-main margintop">
@@ -314,7 +314,9 @@
       <div class="container-activite margintop">
         <a href="#activites" class="card-activite">
           <img src="./images/activites/reno-laithienne.jpg" alt="Vieux-Port" />
-          <p class="gras16px">Vieux-Port</p>
+          <div class="info-card-activite">
+            <p class="gras16px">Vieux-Port</p>
+          </div>
         </a>
 
         <a href="#activites" class="card-activite">
@@ -322,7 +324,9 @@
             src="./images/activites/paul-hermann.jpg"
             alt="Fort de Pomègues"
           />
-          <p class="gras16px">Fort de Pomègues</p>
+          <div class="info-card-activite">
+            <p class="gras16px">Fort de Pomègues</p>
+          </div>
         </a>
 
         <a href="#activites" class="card-activite">
@@ -330,7 +334,9 @@
             src="./images/activites/kilyan-sockalingum.jpg"
             alt="Parc national des Calanques"
           />
-          <p class="gras16px">Parc national des Calanques</p>
+          <div class="info-card-activite">
+            <p class="gras16px">Parc national des Calanques</p>
+          </div>
         </a>
 
         <a href="#activites" class="card-activite">
@@ -338,7 +344,9 @@
             src="./images/activites/florian-wehde.jpg"
             alt="Notre-Dame-de-la-Garde"
           />
-          <p class="gras16px">Notre-Dame-de-la-Garde</p>
+          <div class="info-card-activite">
+            <p class="gras16px">Notre-Dame-de-la-Garde</p>
+          </div>
         </a>
       </div>
     </section>
