Fix des derniers bug lié au responsive : margin:mobile + padding:aside:tablette

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 alt="Hôtel du port"
               />
               <div class="info-card-main">
-                <p class="gras16px">Hôtel du port</p>
+                <h5 class="gras16px">Hôtel du port</h5>
                 <p class="price-hotel">Nuit à partir de 52€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -141,7 +141,7 @@
                 alt="Hôtel Chez Amina"
               />
               <div class="info-card-main">
-                <p class="gras16px">Hôtel Chez Amina</p>
+                <h5 class="gras16px">Hôtel Chez Amina</h5>
                 <p class="price-hotel">Nuit à partir de 96€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -161,7 +161,7 @@
                 alt="Hôtel Les mouettes"
               />
               <div class="info-card-main">
-                <p class="gras16px">Hôtel Les mouettes</p>
+                <h5 class="gras16px">Hôtel Les mouettes</h5>
                 <p class="price-hotel">Nuit à partir de 76€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -181,7 +181,7 @@
                 alt="Hôtel de la mer"
               />
               <div class="info-card-main">
-                <p class="gras16px">Hôtel de la mer</p>
+                <h5 class="gras16px">Hôtel de la mer</h5>
                 <p class="price-hotel">Nuit à partir de 46€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -201,7 +201,7 @@
                 alt="Auberge de la canebière"
               />
               <div class="info-card-main">
-                <p class="gras16px">Auberge de la canebière</p>
+                <h5 class="gras16px">Auberge de la canebière</h5>
                 <p class="price-hotel">Nuit à partir de 25€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -221,7 +221,7 @@
                 alt="Auberge Le Panier"
               />
               <div class="info-card-main">
-                <p class="gras16px">Auberge Le Panier</p>
+                <h5 class="gras16px">Auberge Le Panier</h5>
                 <p class="price-hotel">Nuit à partir de 23€</p>
                 <div class="rating">
                   <i class="fa-solid fa-star star-full fa-2xs"></i>
