--- a/index.html
+++ b/index.html
@@ -81,26 +81,26 @@
         </form>
 
         <section class="filtres margintop">
-          <em>Filtres</em>
+          <h3>Filtres</h3>
           <div class="filtres-wrapper">
             <div class="filtres-card">
               <i class="fa-solid fa-money-bill"></i>
-              <h3>Économique</h3>
+              <h4>Économique</h4>
             </div>
 
             <div class="filtres-card">
               <i class="fa-solid fa-person"></i>
-              <h3>Familial</h3>
+              <h4>Familial</h4>
             </div>
 
             <div class="filtres-card">
               <i class="fa-solid fa-heart"></i>
-              <h3>Romantique</h3>
+              <h4>Romantique</h4>
             </div>
 
             <div class="filtres-card">
               <i class="fa-solid fa-fire"></i>
-              <h3>Nos pépites</h3>
+              <h4>Nos pépites</h4>
             </div>
           </div>
         </section>
@@ -113,7 +113,7 @@
 
       <div id="hebergement" class="hebergement margintop">
         <section class="offresMain">
-          <h4>Hébergements à Marseille</h4>
+          <h5>Hébergements à Marseille</h5>
           <div class="container-main margintop">
             <article>
               <a href="#hebergement" class="card-main">
@@ -122,7 +122,7 @@
                   alt="Hôtel du port"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Hôtel du port</h5>
+                  <h6 class="gras16px">Hôtel du port</h6>
                   <p class="price-hotel">Nuit à partir de 52€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -142,7 +142,7 @@
                   alt="Hôtel Chez Amina"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Hôtel Chez Amina</h5>
+                  <h6 class="gras16px">Hôtel Chez Amina</h6>
                   <p class="price-hotel">Nuit à partir de 96€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -162,7 +162,7 @@
                   alt="Hôtel Les mouettes"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Hôtel Les mouettes</h5>
+                  <h6 class="gras16px">Hôtel Les mouettes</h6>
                   <p class="price-hotel">Nuit à partir de 76€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -182,7 +182,7 @@
                   alt="Hôtel de la mer"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Hôtel de la mer</h5>
+                  <h6 class="gras16px">Hôtel de la mer</h6>
                   <p class="price-hotel">Nuit à partir de 46€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -202,7 +202,7 @@
                   alt="Auberge de la canebière"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Auberge de la canebière</h5>
+                  <h6 class="gras16px">Auberge de la canebière</h6>
                   <p class="price-hotel">Nuit à partir de 25€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -222,7 +222,7 @@
                   alt="Auberge Le Panier"
                 />
                 <div class="info-card-main">
-                  <h5 class="gras16px">Auberge Le Panier</h5>
+                  <h6 class="gras16px">Auberge Le Panier</h6>
                   <p class="price-hotel">Nuit à partir de 23€</p>
                   <div class="rating">
                     <i class="fa-solid fa-star star-full fa-2xs"></i>
@@ -241,7 +241,7 @@
 
         <aside id="aside">
           <div class="top-aside">
-            <h4>Les plus populaires</h4>
+            <h5>Les plus populaires</h5>
             <i class="fa-solid fa-arrow-trend-up"></i>
           </div>
 
@@ -310,7 +310,7 @@
       </div>
 
       <section id="activites" class="activites margintop">
-        <h4>Activités à Marseille</h4>
+        <h5>Activités à Marseille</h5>
 
         <div class="container-activite margintop">
           <a href="#activites" class="card-activite">
@@ -358,20 +358,20 @@
 
     <footer class="margintop">
       <div class="a-propos">
-        <em>À propos</em>
+        <h3>À propos</h3>
         <a>Fonctionnement du site</a>
         <a>Conditions générales</a>
         <a>Données et confidentialité</a>
       </div>
 
       <div class="nos-hebergements">
-        <em>Nos hébergements</em>
+        <h3>Nos hébergements</h3>
         <a>Charte qualité</a>
         <a>Proposer votre hôtel</a>
       </div>
 
       <div class="assistance">
-        <em>Assistance</em>
+        <h3>Assistance</h3>
         <a>Centre d’aide</a>
         <a>Nous contacter</a>
       </div>
