Class commune dans le footer

--- a/index.html
+++ b/index.html
@@ -357,23 +357,23 @@
     </main>
 
     <footer class="margintop">
-      <div class="a-propos">
+      <div class="footer-section">
         <h3>À propos</h3>
-        <a>Fonctionnement du site</a>
-        <a>Conditions générales</a>
-        <a>Données et confidentialité</a>
+        <a href="#">Fonctionnement du site</a>
+        <a href="#">Conditions générales</a>
+        <a href="#">Données et confidentialité</a>
       </div>
 
-      <div class="nos-hebergements">
+      <div class="footer-section">
         <h3>Nos hébergements</h3>
-        <a>Charte qualité</a>
-        <a>Proposer votre hôtel</a>
+        <a href="#">Charte qualité</a>
+        <a href="#">Proposer votre hôtel</a>
       </div>
 
-      <div class="assistance">
+      <div class="footer-section">
         <h3>Assistance</h3>
-        <a>Centre d’aide</a>
-        <a>Nous contacter</a>
+        <a href="#">Centre d’aide</a>
+        <a href="#">Nous contacter</a>
       </div>
     </footer>
   </body>
