Mobile : 'Afficher plus' visible + bouton loupe integre avec fontawesome

--- a/index.html
+++ b/index.html
@@ -61,23 +61,10 @@
             />
           </div>
 
-          <input
-            class="rechercher-desktop"
-            type="submit"
-            value="Rechercher"
-            name="envoiLocalisation"
-            id="envoiLocalisationDesktop"
-            formmethod="get"
-          />
-
-          <input
-            class="rechercher-mobile"
-            type="submit"
-            value=""
-            name="envoiLocalisation"
-            id="envoiLocalisationMobile"
-            formmethod="get"
-          />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <span>Rechercher</span>
+          </button>
         </form>
 
         <section class="filtres margintop">
